@@ -1,7 +1,7 @@
 /*
  * Copyright (c) 1996, 1997, 1998, 1999
  *             Shigio Yamaguchi. All rights reserved.
- * Copyright (c) 1999, 2000
+ * Copyright (c) 1999, 2000, 2001
  *             Tama Communications Corporation. All rights reserved.
  *
  * This file is part of GNU GLOBAL.
@@ -36,6 +36,7 @@
 
 extern	const char *progname;
 
+void setquiet();
 #ifdef HAVE_STDARG_H
 void die(const char *s, ...);
 #else
